--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,12 @@ body {
   min-width: 320px;
 }
 
+.fullScreen {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+
 /* ====logo__wrapper====== */
 
 .logo__wrapper>a {
@@ -44,13 +50,15 @@ body {
 .login__svg {
   stroke: orange;
   stroke-opacity: 0.5;
+  cursor: pointer;
 }
 
 .login:hover>span {
   text-decoration: underline;
 }
 
-.login:hover>svg {
+.login:hover>svg,
+.fullScreen:hover>svg {
   stroke-opacity: 1;
 }
 
@@ -60,9 +68,9 @@ body {
   padding-right: 10px;
 }
 
-.svg_signIn {
+/* .svg_signIn {
   stroke-opacity: 1;
-}
+} */
 
 .login__word {
   color: white;
@@ -276,6 +284,11 @@ body {
   padding: 5px 0;
 }
 
+.btnSearch:active,
+.checkedExercises:active {
+  transform: translateY(3%);
+}
+
 .selectExersices,
 .name__input {
   color: white;
@@ -288,8 +301,8 @@ body {
   border: 1px solid deepskyblue;
   margin: 10px 25px;
   align-items: center;
-  padding-right: 20px;
-  gap: 25px;
+  padding-right: 10px;
+  gap: 5px;
   max-width: 600px;
 }
 
@@ -411,8 +424,7 @@ body {
 /* -----------------медиазапросы---------- */
 @media screen and (max-width:600px) {
 
-  .logo__row,
-  .login__svg {
+  .logo__row {
     display: none;
   }
 
@@ -450,6 +462,11 @@ body {
   .repsLink {
     display: none;
   }
+
+  .logo__first,
+  .logo__second {
+    font-size: 1.5rem;
+  }
 }
 
 @media screen and (max-width:800px) {
@@ -465,5 +482,10 @@ body {
   .repsInput {
     padding: 0;
     width: 100px;
+  }
+
+  .logo__first,
+  .logo__second {
+    font-size: 2rem;
   }
 }
